fix overflow text in list

--- a/webplugin/css/app/mck-sidebox-1.0.css
+++ b/webplugin/css/app/mck-sidebox-1.0.css
@@ -1756,13 +1756,15 @@
 	border: none;
 	padding-right: 0;
 	cursor: pointer;
+}
+.stop-selection{
 	/* Remove text selection for diffrent browser */
 	-webkit-touch-callout: none; 
 	-webkit-user-select: none; 
 	-khtml-user-select: none; 
 	-moz-user-select: none; 
 	-ms-user-select: none;
-    user-select: none;
+	user-select: none;
 }
 
 .mck-bot-icon svg:hover path {
@@ -1779,7 +1781,10 @@
 	display: none;
 	float: left;
 	min-width: 130px;
-	max-width: 300px;
+	max-width: 220px;
+	max-height: 150px;
+	overflow: hidden auto;
+	scrollbar-width: thin;
 	border-radius: 4px;
 	font-size: 14px;
 	text-align: start;	
@@ -1789,14 +1794,18 @@
 	transition: opacity 0.5s ease-in-out;
 }
 
+ul#mck-intent-options::-webkit-scrollbar-track {
+    background: #fff;
+}
+
 ul.mck-intent-menu>li {
-	padding: 5px 10px;
+	padding: 6px 10px;
 	color: #000000;
+	hyphens: auto;
 }
 
 ul.mck-intent-menu>li:hover {
 	background-color: #F5F5F5;
-	white-space: nowrap;
 	cursor: pointer;
 }
 
